# openmw-ai-cs

./: .gitignore  CLAUDE.md  PLANv1.md  README.md
asset-forge/: .env.example  .gitignore  README.md  pyproject.toml
asset-forge/docs/: architecture.md  configuration.md  generators.md  record-types.md
asset-forge/forge/: __init__.py  cli.py  config.py  orchestrator.py  pipeline.py
asset-forge/forge/generators/: __init__.py  audio.py  blender.py  image.py  mesh.py  procedural.py
asset-forge/forge/types/: __init__.py  esm.py  plan.py  procedural.py
asset-forge/scripts/: start_hunyuan3d.sh  start_stable_diffusion.sh
omwtools/: pyproject.toml
omwtools/omwtools/: __init__.py
omwtools/omwtools/cli/: cmd_dungeon.py  cmd_validate.py  cmd_write.py  main.py
omwtools/omwtools/db/: connection.py  migrate.py  queries.py  schema.py  store.py
omwtools/omwtools/dungeons/: cell_builder.py  deployer.py  dungeon_spec.py  generator.py  lua_config.py  pool_builder.py  room_builder.py  room_kit.py  tile_spec.py
omwtools/omwtools/dungeons/tilesets/meshes/cave/: omwdg_cave_ceiling.dae  omwdg_cave_corner.dae  omwdg_cave_doorway.dae  (+3 more)
omwtools/omwtools/io/: codec.py  reader.py  refid.py  writer.py
omwtools/omwtools/json_io/: export_.py  import_.py
omwtools/omwtools/omwscripts/: __init__.py  parser.py  writer.py
omwtools/omwtools/records/: __init__.py  _effects.py  alch.py  armo.py  base.py  body.py  book.py  cell.py  clot.py  cont.py  crea.py  dial.py  door.py  ench.py  fact.py  glob.py  ingr.py  land.py  levc.py  ligh.py  lual.py  misc_.py  npc_.py  pgrd.py  race.py  regn.py  scpt.py  skil.py  soun.py  spel.py  sscr.py  tes3.py  unknown.py  weap.py
omwtools/tests/fixtures/: cell_test.esm  make_fixtures.py  minimal.esm  npc_test.esm
omwtools/tests/integration/: test_json_roundtrip.py
omwtools/tests/unit/: test_cell_refs.py  test_corridor_rotation.py  test_db_schema.py  test_dungeon_generator.py  test_mesh_standards.py  test_npc_encode.py  test_omwscripts.py  test_record_parsing.py  test_refid_codec.py  test_room_builder.py
(+184 files in other folders)
