[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omwtools"
version = "0.1.0"
description = "Python library and CLI for reading/writing OpenMW ESM/ESP/omwgame/omwaddon/omwscripts files"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
json-schema = ["jsonschema>=4.20"]
dev = ["pytest>=8.0", "pytest-cov", "hypothesis", "ruff", "mypy"]

[project.scripts]
omw = "omwtools.cli.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
